--- a/webroot/css/obyava-style.css
+++ b/webroot/css/obyava-style.css
@@ -1,1 +1,41 @@
-@CHARSET "UTF-8";
+
+body {
+	padding: 38px 0 0;
+	background: url(../img/bg/grey.png) repeat 0 0 yellow;
+}
+
+/*	TOP LINE WITH FILTER AND SEARCH */
+.top-ads-block-search {
+	float: left;
+	width: 100%;
+	height: 40px;
+}
+	.top-ads-block-search .home-filter {
+	
+	}
+
+/*	Ads on home screen */
+.b_ads-home {
+	float: left;
+	width: 78%;
+	padding: 0 10px;	
+}
+.one-ad {
+	display: inline-block; 
+	width: 240px;
+	height: 300px;
+	padding: 3px 7px;
+	overflow: hidden;
+	border: 1px dashed #333;
+}
+
+/*	Right Panel at home */
+.b_right-panel {
+	float: right;
+	width: 350px;
+	height: 800px;
+	margin: 10px 5px 0 0;
+	padding: 5px 10px;
+	background: #FFF;
+	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.95);
+}
