--- a/webroot/css/obyava-style.css
+++ b/webroot/css/obyava-style.css
@@ -1,41 +1,194 @@
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+nav,
+section {
+  display: block;
+}
 
+audio,
+canvas,
+video {
+  display: inline-block;
+  *display: inline;
+  *zoom: 1;
+}
+
+audio:not([controls]) {
+  display: none;
+}
+
+html {
+  font-size: 100%;
+  -webkit-text-size-adjust: 100%;
+      -ms-text-size-adjust: 100%;
+}
+
+a:focus {
+  outline: thin dotted #333;
+  outline: 5px auto -webkit-focus-ring-color;
+  outline-offset: -2px;
+}
+
+a:hover,
+a:active {
+  outline: 0;
+}
+
+sub,
+sup {
+  position: relative;
+  font-size: 75%;
+  line-height: 0;
+  vertical-align: baseline;
+}
+
+sup {
+  top: -0.5em;
+}
+
+sub {
+  bottom: -0.25em;
+}
+
+img {
+  width: auto\9;
+  height: auto;
+  max-width: 100%;
+  vertical-align: middle;
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+}
+
+#map_canvas img {
+  max-width: none;
+}
+
+button,
+input,
+select,
+textarea {
+  margin: 0;
+  font-size: 100%;
+  vertical-align: middle;
+}
+
+button,
+input {
+  *overflow: visible;
+  line-height: normal;
+}
+
+button::-moz-focus-inner,
+input::-moz-focus-inner {
+  padding: 0;
+  border: 0;
+}
+
+/* НАЧИНАЕМ ОФОРМЛЕНИЕ */
 body {
-	padding: 38px 0 0;
-	background: url(../img/bg/grey.png) repeat 0 0 yellow;
+  margin: 0;
+  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-size: 14px;
+  line-height: 20px;
+  color: #3b3830;
+  background: url(../img/interface/bg/bg-body.jpg) repeat 0 0 #ece9e5;
 }
 
-/*	TOP LINE WITH FILTER AND SEARCH */
-.top-ads-block-search {
-	float: left;
-	width: 100%;
-	height: 40px;
+a {
+  color: #0088cc;
+  text-decoration: none;
 }
-	.top-ads-block-search .home-filter {
-	
+
+a:hover {
+  color: #005580;
+  text-decoration: underline;
+}
+
+.header {
+	position: relative;
+	width: 100%;	
+}
+/* главный логотип */
+.header .home-link {
+	position: relative;
+	width: 287px;
+	margin: 30px auto 0;
+	display: block;
+}
+	/* Блок с к-тю оголошень на сайті */
+	.b_count {
+		float: left;
+		margin: 6px 17px 0 0;
 	}
+	.b_count i {
+		font-style: normal;
+		display: inline-block;
+		margin-right: 5px;
+	}
+	.b_count .num1 {font-size: 12px;}
+	.b_count .num2 {font-size: 30px; font-weight: bold;}
+	.b_count .num3 {font-size: 11px; font-family: 'Myriad Pro', 'Arial'; font-weight: bold; text-transform: uppercase; width:72px; line-height:13px; }
+	.b_count .num3 span {font-size: 12px;}
+	
+.navbar-inner {
+	position: relative;
+	width: 1024px;
+	margin: 21px auto 0;
+}
 
-/*	Ads on home screen */
-.b_ads-home {
+/* Пошуковий рядок в хедері сторінки  */
+.b_top_search {
 	float: left;
-	width: 78%;
-	padding: 0 10px;	
-}
-.one-ad {
-	display: inline-block; 
-	width: 240px;
-	height: 300px;
-	padding: 3px 7px;
+	display: inline-block;
+	width: 478px;
+	height: 31px;
 	overflow: hidden;
-	border: 1px dashed #333;
+	line-height: 31px;
+	background-color: #FFFFFF;
+	border: 1px solid #d7d7d7;
+	-webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+    *zoom: 1;
+    -webkit-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.065) inset;
+       -moz-box-shadow: 0 2px 1px rgba(0, 0, 0, 0.065) inset;
+            box-shadow: 0 2px 1px rgba(0, 0, 0, 0.065) inset;
 }
-
-/*	Right Panel at home */
-.b_right-panel {
-	float: right;
-	width: 350px;
-	height: 800px;
-	margin: 10px 5px 0 0;
-	padding: 5px 10px;
-	background: #FFF;
-	box-shadow: 0 1px 2px rgba(0, 0, 0, 0.95);
-}
+	.b_top_search .q-search {
+		width: 423px;
+		height: 31px;
+		padding: 0 10px;
+		border: 0;
+		font-size: 12px;
+		color: #72706c;	/* плейсхолдер колор #72706c  /#3b3830 */
+		display: inline-block;
+	}
+	.b_top_search .q-submit {
+		display: inline-block;
+		width: 31px;
+		height:31px;
+		border: none;
+		background: url(../img/interface/btn/btn-search.png) no-repeat 50% #FFF;
+		cursor: pointer;
+	}
+	/* Кнопка "Додати оголошення"  */
+	.b_add-ads {
+		float: left;		
+	}
+		.b_add-ads .add-btn {
+			float: left;
+			width: 192px;
+			height: 44px;
+			margin: -10px 0 0 23px;
+			background: url(../img/interface/btn/btn-add-ads.png) no-repeat 0 0;
+			color: #fff;
+			font-family: 'Myriad Pro',Arial;
+			font-weight: bold;
+			text-align: center;
+		}
