--- a/webroot/css/obyava-style.css
+++ b/webroot/css/obyava-style.css
@@ -192,3 +192,77 @@ a:hover {
 			font-weight: bold;
 			text-align: center;
 		}
+		.b_add-ads .add-btn span { display:none; }
+
+.navbar {
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 62px;
+}
+/* Меню фильтр с разными категориями */
+.menu-filter-wrap {
+	display: block;
+	position: relative;
+	width: 100%;
+	height: 62px;
+	border: 1px solid #dedbd6;
+	border-width: 1px 0;
+}
+	.b_main-category-filter {
+		position: relative;
+		width: 1024px;
+		height: 100%;
+		margin: 0 auto;
+	}
+		.b_main-category-filter .li {
+			margin: 0;
+			height: 60px;
+			width: 271px;
+			float: left;
+			list-style: none;
+			padding: 0;
+			line-height: 60px;
+		}
+		.b_main-category-filter .li.auto-category {
+			padding-left: 15px;
+			width: 259px;
+		}
+			.b_main-category-filter .li .link {
+				float: left;
+				text-transform: uppercase;
+				text-decoration: none;
+				color: #3b3830;
+				font-weight: bold;
+				font-family: 'Myriad Pro', Arial;
+				line-height: 70px;
+			}
+		
+[class^="big_icon-"],
+[class*=" big_icon-"] {
+  display: inline-block;
+  width: 81px;
+  height: 60px;
+  *margin-right: .3em;
+  vertical-align: top;
+  background-image: url("../img/interface/btn/obyava-sprite.png");
+  background-position: 14px 14px;
+  background-repeat: no-repeat;
+}
+
+[class^="icon-"]:last-child,
+[class*=" icon-"]:last-child {
+  *margin-left: 0;
+}
+
+.big_icon-immovables {
+	background-position: 13px 6px;
+}
+.big_icon-auto {
+	width: 87px;
+	background-position: 0 -55px;
+}
+.big_icon-other {
+	width: 72px;	
+	background-position: 0 -122px;
+}
