--- a/webroot/css/login.css
+++ b/webroot/css/login.css
@@ -1,27 +1,30 @@
-html,body{
-	heiding: 100%;
-	margin: 0;
-	padding: 0;
-}
-
-body{
-	display: table;
-	height: 100%;
-	text-align: right;
+body {
 	text-align: center;
-	font: .8em/ 1.3;
-	font-family: Candara,Arial, sans-serif;
-	color: #444;
+	font: .8em/ 1.3 Arial, sans-serif;
 }
 
-#centered{
-	widht: 280px;
+#centered {
+	width: 280px;
 	color: #333;
 	margin: 0 auto;
 }
 
-#centered h4{
+#centered h4 {
 	text-align: left;
+}
+
+html,body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
+body {
+	display: table;
+	height: 100%;
+	width: 100%;
+	text-align: right;
+	background-color: #4169E1;
 }
 
 #wrapper {
@@ -29,54 +32,64 @@ body{
 	vertical-align: middle;
 }
 
-form{
-	width: 300px;
-	height: 146px;
-	background: url (../img/admin/login-form.png) no-repead 0 0;
+form {
 	float: left;
-	padding-top: 20px;	
+	width: 300px;
+	height: 190px;
+	padding: 45px 0 0 0;
+	background: url(../img/admin/login-form2.png) no-repeat 0 0;
+	float: left;
 }
-
 label {
 	float: left;
-	widht: 80px;
-	color: #eee;
+	width: 80px;
+	color: #000;
 }
 .input input {
 	float: left;
-	widht: 175px;
+	width: 175px;	
 }
 label, .input input {
-	margin: 3px 45px;
+	margin: 7px 3px;	
 }
 
 div.submit {
-	margin: 5px 45px;
-	text-allign: center;
+	width: 300px;
+	padding: 7px 0;
+	text-align: center;
+}
+div.submit input {
+	font-size: 20px;
+    font-weight: bold;
+    height: 40px;
+    line-height: 1.6;
+    width: 105px;
+}
+#centered .input {
 	float: left;
 }
-
-#AdminLoginForm .error-message{
-	position: absolute;
-	top: 2%;
-	left: 2%;
-	widht: 400px;
-	line-height: 50px;
-	blackground: #ffaeae;
-	/*border: 1px solid #f00; */
+.error-message {
+	float: left;
+	width: 100%;
+	height: 12px;
+	margin: -12px 0;
+	color: #f20;
+	font-size: 10px;
+	font-weight: bold;
 	text-align: center;
-	opacity: 0.8;
 }
-.registration_ref {
-	display: none;
+#flashMessage {
 	position: absolute;
-	widht: 150px;
 	top: 10px;
-	rigt: 10px;
-	line-height: 35px;
-	background-color: $42aaff;
-	border: 3px solid #1e90ff
-}
-.registration_ref a{
+	right: 10px;
+	padding: 10px 15px;
+	font-weight: bold;
+	font-size: 12px;
 	color: #fff;
+	background-color: #3C5C69;
+	-moz-border-radius: 13px;
+	-khtml-border-radius: 13px;
+	-webkit-border-radius: 13px;
+	border-radius: 13px;
+	
 }
