--- a/webroot/css/login.css
+++ b/webroot/css/login.css
@@ -1,6 +1,20 @@
+html,body {
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+
 body {
 	text-align: center;
 	font: .8em/ 1.3 Arial, sans-serif;
+}
+
+body {
+	display: table;
+	height: 100%;
+	width: 100%;
+	text-align: right;
+	background-color: #4169E1;
 }
 
 #centered {
@@ -13,19 +27,6 @@ body {
 	text-align: left;
 }
 
-html,body {
-	height: 100%;
-	margin: 0;
-	padding: 0;
-}
-
-body {
-	display: table;
-	height: 100%;
-	width: 100%;
-	text-align: right;
-	background-color: #4169E1;
-}
 
 #wrapper {
 	display: table-cell;
@@ -68,28 +69,27 @@ div.submit input {
 #centered .input {
 	float: left;
 }
-.error-message {
-	float: left;
-	width: 100%;
-	height: 12px;
-	margin: -12px 0;
-	color: #f20;
-	font-size: 10px;
-	font-weight: bold;
-	text-align: center;
-}
-#flashMessage {
+#AdminLoginForm .error-message{
 	position: absolute;
+	top: 2%;
+	left: 2%;
+	widht: 400px;
+	line-height: 50px;
+	blackground: #ffaeae;
+	/*border: 1px solid #f00; */
+	text-align: center;
+	opacity: 0.8;
+}
+.registration_ref {
+	display: none;
+	position: absolute;
+	widht: 150px;
 	top: 10px;
-	right: 10px;
-	padding: 10px 15px;
-	font-weight: bold;
-	font-size: 12px;
+	rigt: 10px;
+	line-height: 35px;
+	background-color: $42aaff;
+	border: 3px solid #1e90ff
+}
+.registration_ref a{
 	color: #fff;
-	background-color: #3C5C69;
-	-moz-border-radius: 13px;
-	-khtml-border-radius: 13px;
-	-webkit-border-radius: 13px;
-	border-radius: 13px;
-	
 }
