--- a/webroot/css/login.css
+++ b/webroot/css/login.css
@@ -14,7 +14,7 @@ body {
 	height: 100%;
 	width: 100%;
 	text-align: right;
-	background-color: #4169E1;
+	background-color: #006400;
 }
 
 #centered {
@@ -38,10 +38,12 @@ form {
 	width: 300px;
 	height: 190px;
 	padding: 45px 0 0 0;
-	background: url(../img/admin/login-form2.png) no-repeat 0 0;
+	background: url(../img/admin/login-form3.png) no-repeat 0 0;
 	float: left;
 }
-label {
+label {	
+	font-size: 16px;
+	font-weight: bold;
 	float: left;
 	width: 80px;
 	color: #000;
