--- a/webroot/css/obyava-style.css
+++ b/webroot/css/obyava-style.css
@@ -276,7 +276,7 @@ a:hover {
 
 .right-menu {
 	float: right;
-	width: 280px;
+	width: 250px;
 	min-height: 470px;
 	margin: 25px 25px 0 0;
 	padding: 10px;	
@@ -377,3 +377,60 @@ a:hover {
 .sml_icon-vk {background-position: -103px -280px;}
 .sml_icon-fb {background-position: -123px -280px;}
 .sml_icon-eye {background-position: -144px -280px;}
+
+
+
+/*	LIST OF ADS ON INDEX PAGE */
+.index-das-wrap {
+	position: relative;
+	margin: 0 auto;	
+	min-height: 100%;	
+}
+
+
+/*	RESPONSIVE DESIGN SYKA	*/
+@media (max-width: 1000px) {
+	.index-das-wrap {width: 980px; }
+}
+
+@media (max-width: 1920px) {
+	.index-das-wrap {width: 1255px; }	/* одна маленька об*ява в ширину 251рх */
+}
+@media (max-width: 1600px) {
+	.index-das-wrap {width: 1004px; }
+}
+@media (max-width: 1440px) {
+	.index-das-wrap {width: 1004px; }
+}
+@media (max-width: 1336px) {
+	.index-das-wrap {width: 1004px; }
+}
+@media (max-width: 1024px) {
+	.index-das-wrap {width: 753px; }
+}
+@media (max-width: 800px) {
+	.index-das-wrap {width: 502px; }
+}
+@media (max-width: 480px) {
+	.index-das-wrap {width: 251px; }
+}
+/*
+@media (min-width: 1020px) {
+	.right-menu {display: none;} /* TODO: коли розмір монітора зменшується, то меню з підприємствами треба кудись винести */
+}
+*/
+
+/*
+@media (min-width: 768px) and (max-width: 979px) {
+	
+}
+@media (max-width: 480px) {
+
+}
+@media (max-width: 767px) {
+
+}
+@media (min-width: 1200px) {
+	
+}
+*/
