--- a/webroot/css/login.css
+++ b/webroot/css/login.css
@@ -7,14 +7,12 @@ html,body {
 body {
 	text-align: center;
 	font: .8em/ 1.3 Arial, sans-serif;
-}
-
-body {
 	display: table;
 	height: 100%;
 	width: 100%;
-	text-align: right;
-	background-color: #006400;
+	text-align: right;	
+	color: #3b3830;
+  	background: url(../img/interface/bg/bg-body.jpg) repeat 0 0 #ece9e5;
 }
 
 #centered {
@@ -33,27 +31,49 @@ body {
 	vertical-align: middle;
 }
 
-form {
+.login-form {
 	float: left;
 	width: 300px;
-	height: 190px;
-	padding: 45px 0 0 0;
-	background: url(../img/admin/login-form3.png) no-repeat 0 0;
+	height: 138px;
+	padding: 28px 0 0 0;	
 	float: left;
+	border: 1px solid #dedbd6;
+	-webkit-border-radius: 6px;
+       -moz-border-radius: 6px;
+            border-radius: 6px;
+    -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25) inset;
+       -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25) inset;
+            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.25) inset;
 }
 label {	
 	font-size: 16px;
 	font-weight: bold;
 	float: left;
+	line-height: 30px;
 	width: 80px;
 	color: #000;
 }
 .input input {
 	float: left;
-	width: 175px;	
+	width: 145px;
+	margin-left: 0;
+	margin-bottom: 10px;
+	padding: 4px 6px;	
+	background-color: #FFFFFF;
+    border: 1px solid #CCCCCC;
+    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.075) inset;
+    transition: border 0.2s linear 0s, box-shadow 0.2s linear 0s;
+    border-radius: 4px 4px 4px 4px;
+    color: #555555;
+    display: inline-block;
+    font-size: 14px;
+    height: 20px;
+    line-height: 20px;
+    font-weight: normal;
+    vertical-align: middle;
 }
 label, .input input {
-	margin: 7px 3px;	
+	margin: 5px 3px;	
 }
 
 div.submit {
