--- a/webroot/css/obyava-style.css
+++ b/webroot/css/obyava-style.css
@@ -125,6 +125,7 @@ a:hover {
 	.b_count {
 		float: left;
 		margin: 6px 17px 0 0;
+		text-shadow: 0 1px 1px #fff;
 	}
 	.b_count i {
 		font-style: normal;
