--- a/webroot/css/obyava-style.css
+++ b/webroot/css/obyava-style.css
@@ -425,6 +425,111 @@ a:hover {
 	margin: 0 auto;	
 	min-height: 100%;	
 }
+/* -------------------------------------------------------------------------------------------------------- */
+/* 								ADD/EDIT ADS FORM 															*/
+.ad-edit-form {
+	width: 600px;
+	height: 500px;
+	padding: 20px;
+	position: relative;
+	margin: 0 auto;
+	border: 2px solid #3B3830;
+	border-radius: 5px;
+}
+	.ad-edit-form .left {float: left; width:300px;}
+	.ad-edit-form .right {float: left; width:280px; margin:28px 0 0 20px;}
+.black-bg-title {
+	height: 1em;
+	margin: 0 0 15px;
+	padding: 0;
+	font-size: 31px;	
+	color: #3B3830;
+	text-shadow: 0 1px 1px #FFF;	
+		
+}
+.ad-edit-form .input {
+	float: left;
+	width: 100%;
+	margin:0 0 7px;	
+}
+	.ad-edit-form .input label { float: left; width: 200px; font-size: 13px;}
+	.ad-edit-form .input.checkbox label {width: 240px;}
+	.ad-edit-form .input select, .ad-edit-form .input input[type=text] { float: left; width: 295px; padding: 4px 3px;}
+	textarea#AdText{
+		font-size: 14px;
+		font-family: 'MS Shell Dlg';
+		font-weight: normal;
+		width: 290px;
+		height: 180px;
+		margin: 0 0 10px 0;	
+	}
+ol.description{
+	margin-top: 1em;	
+	margin-left: 7px;
+	color: #444;
+	font-size: 12px;
+}
+ol.description li{
+	margin-bottom: 1em;	
+}	
+.description span{
+	color: #777;
+	font-size: 0.9em;	
+}
+.description span a{
+	color: #999;
+	font-weight: bold;		
+}
+.description span a:hover{
+	text-decoration: none;
+}	
+h3.error{
+	margin: 0;
+	padding: 0;
+	height: 60px;	
+}
+.error-message {
+	border: 1px dashed red;
+	color: #FF2233;
+	font-size: 0.8em;
+	left: 350px;
+	padding: 5px;
+	position: absolute;
+	top: 300px;
+	width: 260px;
+}
+.text-error, .tags-error{
+	color: red;
+	font-size: .8em;
+}	
+.ads-add .text-error{
+	height: 200px;
+	margin-top: 35px;
+}
+div.submit{
+	float: right;
+	margin-right: 10px;
+}
+input.error, select.error, textarea.error{
+	background-color: #fee;
+	border: 1px solid #faa;	
+}	
+.ad-edit-form .select select, .ad-edit-form .input input, .ad-edit-form .category-placeholder {
+	border: 1px solid #e3e9ef;
+	border-color: #abadb3 #e3e9ef #e3e9ef;
+	border-radius: 2px;
+	cursor: pointer;
+}
+	.ad-edit-form .category-placeholder {
+		float: left;
+		width: 279px;
+		background-color: #FFF;
+		color: #000;
+		padding: 2px 7px;
+		font-size: 14px;
+		font-family: 'MS Shell Dlg';		
+	}
+/* -------------------------------------------------------------------------------------------------------- */
 
 
 /* EDIT ADS WINDOW, SELECT CATEGORY */
@@ -469,3 +574,61 @@ a:hover {
 		.b_category-block .li input {
 			margin: 15px 0 0;
 		}
+/* CATEGORY POPUP FOR EDIT AD */		
+.b_category-block {	
+	float: left;
+	
+	width: 775px;
+	min-height: 300px;
+	padding: 26px;
+	
+	background: #FFF;
+	border: 1px solid #dce0e6;
+	border-radius: 4px; 
+	display: table;
+}
+	.b_category-block .li, .b_category-block .cat_title {padding:0; margin: 0; list-style: none;}
+	.b_category-block .cat_title {float: left; width: 100%; height: auto; background: transparent; border: 0; font-weight: bold;}
+	
+	.b_category-block .li {
+		float: left;
+		width: 130px;
+		height: 45px;
+		padding: 0 10px 0 13px;
+		background-color: #fbfbfb;		
+		margin: 0 2px 2px 0;		
+		display: inline-table;
+		border-radius: 2px;
+		color: #3B3830;
+	}
+	.b_category-block .li:hover {
+		background-color: #3B3830;
+		color: #FFF;
+	}
+		.b_category-block .li label {
+			vertical-align: middle;
+			height: 100%;
+			display: table-cell;
+			padding: 0 0 0 5px;
+			line-height: 11px;
+			font-size: 12px;
+			cursor: pointer;			
+		}
+		.b_category-block .li input {
+			margin: 15px 0 0;
+		}
+
+		
+/* STYLEISH FOR POPUP WINDOWS */
+.popup-close-btn {
+	position: absolute;
+	right: 0;
+	top: -5px;
+	text-decoration: none;
+	font-size: 24px;
+	font-weight: bold;
+	color: #efefef;
+}
+	.popup-close-btn:hover {
+		color: #FF0000;
+	}
