--- a/webroot/css/obyava-style.css
+++ b/webroot/css/obyava-style.css
@@ -463,6 +463,18 @@ a:hover {
 		height: 180px;
 		margin: 0 0 10px 0;	
 	}
+	.ad-edit-form .btn-save {
+		display: inline-block;
+		width: 133px;
+		height: 44px;
+		background: url(../img/btn/btn-save.png) no-repeat 0 0;
+		font-size: 0;
+		border: none;
+	}
+		.ad-edit-form .btn-save:active {
+			background-position: 0 1px;
+		}
+	
 ol.description{
 	margin-top: 1em;	
 	margin-left: 7px;
